# MATHUSLA-Kalman-Algorithm

./: CITATION.cff  README.md
analysis/: analyzer.py  cutflow.py  detector.py  event.py  find_cdf_thresh.py  find_mean_vertex.py  genTrigger.py  main.py  missing_hit_analyser.py  open_flows.py  physics.py  plot_branches.py  read_tree_event_info.py  scattering_calculation.py  util.py  vertex.py  visualization.py
docs/: covarianceJacobian.py
env/: environment.yml
parallel/: README.md  analysis_job_submit.sh  analysis_names.txt  sim_job_submit.sh  tracker_job_submit.sh  tracker_names.txt  write_root_names.sh
tracker/: CMakeLists.txt
tracker/include/: Digitizer.hh  Geometry.hh  LinearAlgebra.hh  NoiseMaker.hh  RunManager.hh  TrackFinder.hh  TrackFinder_c_b.hh  TreeHandler.hh  VertexFinder.hh  VertexFinder_c_b.hh  globals.hh  kalman-test.hh  kalman-test_c_b.hh  kalman.hh  kalman_c_b.hh  par_handler.hh  physics.hh  statistics.hh  util.hh
tracker/run/: DataNames.txt  Parameters.txt  README.md  README.txt  done.txt  mod_globs.py  par_card.txt  plotting.py  run.sh  track_directory.sh  write_root_names.sh
tracker/src/: Digitizer.cc  LinearAlgebra.cc  NoiseMaker.cc  Physics.cc  RunManager.cc  TrackFinder.cc  TrackFinder_c_b.cc  VertexFinder.cc  VertexFinder_c_b.cc  kalman-test.cc  kalman-test.cc.save  kalman-test_c_b.cc  kalman.cc  kalman_c_b.cc  par_handler.cc  tracking.cc
